--- a/index.html
+++ b/index.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GÖZÜM BENİM</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1 class="question">BENİMLE EVLENİR MİSİN ASKİMMMM</h1>
-    <div class="container">
-        <button class="yes-button">EVET</button>
-        <button class="no-button">HAYIR</button>
-        <canvas id="confettiCanvas"></canvas>
-        <div class="thank-you-message" style="display: none;">
-            <p>TEŞEKKÜRLER SEVGİLİM!</p>
-            <img src="ring.png" alt="Yüzük" class="ring-image" />
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
